--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.0"
